changing the font, and background

--- a/about.html
+++ b/about.html
@@ -5,6 +5,9 @@
 	<title>Walter Cheng</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!--font from google font-->
+	<link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+	<!--link to bootstrap-->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -27,17 +30,17 @@
 	</nav>
 
 	<div class="jumbotron">
-		<div class="container text-center">
+		<div class="container text-center title">
 			<h2>About</h2>
 		</div>
 	</div>
 
-	<div class="container text-center">
-		<h4>Walter Cheng</h4><br/>
+	<div class="container text-center" id="about">
+		<h2>Walter Cheng</h2><br/>
 		<p>I am a Computer Science student streaming Game Development from Carleton University in third year standing. </p>
 		<p>My goal is to become a game designer/programmer.</p><br/>
 
-		<h3>Free feel to contact me!</h3><br/>
+		
 		<h4>Email : 
 		<a href="mailto:walterpakwai@live.com" target="_top">
 			<span class="glyphicon glyphicon-envelope"></span> walterpakwai@live.com
