--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,10 @@
 	<title>Walter Cheng</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!--font from google font-->
+	<link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
+	<!--link to bootstrap-->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -27,13 +31,13 @@
 	</nav>
 
 	<div class="jumbotron">
-		<div class="container text-center">
+		<div class="container text-center" id="namebar">
 			<h1>Walter Cheng</h1>
 		</div>
 	</div>
 
 	<div class="text-center front-page">
-		<h1>I want to write something here</h1>
+		<h4>I want to write something here</h4>
 	</div>
 
 
