--- a/project-03.html
+++ b/project-03.html
@@ -5,6 +5,9 @@
 	<title>Walter Cheng</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!--font from google font-->
+	<link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+	<!--link to bootstrap-->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -27,7 +30,7 @@
 	</nav>
 
 	<div class="jumbotron">
-		<div class="container text-center">
+		<div class="container text-center title">
 			<h2>Project</h2>
 		</div>
 	</div>
