--- a/public/about.html
+++ b/public/about.html
@@ -37,7 +37,7 @@
 
 	<div class="container text-center" id="about">
 		<h2>Walter Cheng</h2><br/>
-		<p>I am a Computer Science student streaming Game Development from Carleton University in third year standing. </p>
+		<p>I am a Computer Science student in the Game Development stream from Carleton University in third year standing. </p>
 		<p>My goal is to become a game designer/programmer.</p><br/>
 
 		
