change all to suit the server

--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -23,9 +23,9 @@
 				<a class="navbar-brand" href="portfolio.html">W</a>
 			</div>
 			<ul class="nav navbar-nav navbar-right" id="headbar">
-				<li><a href="resume.html">Resume</a></li>
-				<li><a href="project.html">Project</a></li>
-				<li><a href="about.html">About</a></li>
+				<li><a href="/resume">Resume</a></li>
+				<li><a href="/project">Project</a></li>
+				<li><a href="/about">About</a></li>
 			</ul>
 		</div>
 	</nav>
