--- a/public/resume.html
+++ b/public/resume.html
@@ -19,12 +19,12 @@
 	<nav class="navbar navbar-inverse">
 		<div class="container-fluid">
 			<div class="navbar-header" id="header">
-				<a class="navbar-brand" href="portfolio.html">W</a>
+				<a class="navbar-brand" href="/portfolio">W</a>
 			</div>
 			<ul class="nav navbar-nav navbar-right" id="headbar">
-				<li class="active"><a href="resume.html">Resume</a></li>
-				<li><a href="project.html">Project</a></li>
-				<li><a href="about.html">About</a></li>
+				<li class="active"><a href="/resume">Resume</a></li>
+				<li><a href="/project">Project</a></li>
+				<li><a href="/about">About</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -142,7 +142,7 @@
 
 		<h4>APPLIED PROJECTS</h4>
 		<hr>
-		<p style="font-weight:bold">For applied projects that is related to game development, please go to <a href="project.html">PROJECT</a> section</p>
+		<p style="font-weight:bold">For applied projects that is related to game development, please go to <a href="/project">PROJECT</a> section</p>
 	</div>
 
 </body>
