--- a/public/project-01.html
+++ b/public/project-01.html
@@ -19,12 +19,12 @@
 	<nav class="navbar navbar-inverse">
 		<div class="container-fluid">
 			<div class="navbar-header" id="header">
-				<a class="navbar-brand" href="portfolio.html">W</a>
+				<a class="navbar-brand" href="/portfolio">W</a>
 			</div>
 			<ul class="nav navbar-nav navbar-right" id="headbar">
-				<li><a href="resume.html">Resume</a></li>
-				<li class="active"><a href="project.html">Project</a></li>
-				<li><a href="about.html">About</a></li>
+				<li><a href="/resume">Resume</a></li>
+				<li class="active"><a href="/project">Project</a></li>
+				<li><a href="/about">About</a></li>
 			</ul>
 		</div>
 	</nav>
