--- a/public/project.html
+++ b/public/project.html
@@ -43,7 +43,7 @@
 			<h4>Imitator</h4>
 			<p>Game that allow player to get enemies' bullet type</p>
 			<p>A well balanced game since the player won't be able to have the same bullet type for a long period of time</p>
-			<p class="text-right"><a href="/project-03">(Read more...)</a></p>
+			<p class="text-right"><a href="/project/3">(Read more...)</a></p>
 		</div>
 	</div>
 	<hr/>
@@ -53,7 +53,7 @@
 			<h4>Music shooter</h4>
 			<p>Horizontal scrolling shooting game</p>
 			<p>Character assets were drawn by myself</p>
-			<p class="text-right"><a href="/project-01">(Read more...)</a></p>
+			<p class="text-right"><a href="/project/1">(Read more...)</a></p>
 		</div>
 		<div class="media-right">
 			<img class="d-flex align-self-center mr-3" src="./Assets/001.png" style="width:300px"/>
@@ -69,7 +69,7 @@
 			<h4>Ball Game</h4>
 			<p>A coding practice for myself</p>
 			<p>Game rule is based on a mobile app game : BBTAN from 111%.</p>
-			<p class="text-right"><a href="/project-02">(Read more...)</a></p>
+			<p class="text-right"><a href="/project/2">(Read more...)</a></p>
 		</div>
 	</div>
 	<hr/>
