--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -20,7 +20,7 @@
 	<nav class="navbar navbar-inverse">
 		<div class="container-fluid">
 			<div class="navbar-header" id="header">
-				<a class="navbar-brand" href="portfolio.html">W</a>
+				<a class="navbar-brand" href="/">W</a>
 			</div>
 			<ul class="nav navbar-nav navbar-right" id="headbar">
 				<li><a href="/resume">Resume</a></li>
