--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -25,7 +25,7 @@
 			<ul class="nav navbar-nav navbar-right" id="headbar">
 				<li><a href="/resume">Resume</a></li>
 				<li><a href="/project">Project</a></li>
-				<li><a href="/about">About</a></li>
+				<li><a href="/contact">Contact</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -37,7 +37,9 @@
 	</div>
 
 	<div class="text-center front-page">
-		<h4>I want to write something here</h4>
+		<h4>Hi! I'm Walter, third year Computer Science Game Development student. I love designing game and also love learning the concept for different coding. </h4>
+		<br/>
+		<h4>Other than coding, I also have a tons of interested! Look here(not implemented yet looool) to check it out!</h4>
 	</div>
 
 
