--- a/public/project.html
+++ b/public/project.html
@@ -24,7 +24,7 @@
 			<ul class="nav navbar-nav navbar-right" id="headbar">
 				<li><a href="/resume">Resume</a></li>
 				<li class="active"><a href="/project">Project</a></li>
-				<li><a href="/about">About</a></li>
+				<li><a href="/contact">Contact</a></li>
 			</ul>
 		</div>
 	</nav>
