add line for project 3

--- a/public/project-3.html
+++ b/public/project-3.html
@@ -111,6 +111,7 @@
 			<a href="./Assets/Imitator.zip">
 				<h1> <span class="glyphicon glyphicon-download-alt"> </h1>
 			</a>
+			<p>Some computers may need to download Visual C++ Redistributable in order to run this game, click <a target="_blank" href="https://www.microsoft.com/en-us/download/details.aspx?id=48145">here</a></p>
 
 			<br>
 
