adding grade page

--- a/public/resume.html
+++ b/public/resume.html
@@ -50,7 +50,7 @@
 		<p style="font-weight:bold;">September 2015-Present : Bachelor of Computer Science, Game Development Strea</p>
 		<p>Carleton University, Ottawa, ON</p>
 		<ul>
-			<li>3rd Year Undergraduate, CGPA 10.7/12.0 (A-)</li>
+			<li>3rd Year Undergraduate, CGPA 10.7/12.0 (A-) <a href="/grade">(See grade page)</a></li>
 			<li>Carleton University Entrance Scholarship</li>
 			<li>Expected Graduation April 2019</li>
 			<li>Dean's Honor list(2015 - 2016)</li>
@@ -61,7 +61,7 @@
 
 		<h4>PROGRAMMING EXPERIENCE</h4>
 		<hr>
-		<table>
+		<table class="experience">
 		<tr>
 			<td>Learnt</td>	
 			<td> </td>
