setting up icon

--- a/public/contact.html
+++ b/public/contact.html
@@ -41,12 +41,12 @@
 		
 		<h4>Email : 
 		<a href="mailto:walterpakwai@live.com" target="_top">
-			<span class="glyphicon glyphicon-envelope"></span> walterpakwai@live.com
+			<img src="./Assets/e-mail-envelope.png" />walterpakwai@live.com
 		</a>
 		</h4>
 		<h4>Github : <a href="https://github.com/Walter0697"><img src="./Assets/GitHub-Mark-Light-32px.png" /> Walter0697</a> </h4>
-		<h4>Facebook : <a href="https://www.facebook.com/walterwaiiiiii"><img src="./Assets/Facebook_image.png" /> Wal Wai</a> </h4>
-		<h4>Twitter : <a href="https://twitter.com/TheWai_21"><img src="./Assets/Twitter_image.png" /> TheWai_21 </a></h4>
+		<h4>Facebook : <a href="https://www.facebook.com/walterwaiiiiii"><img src="./Assets/facebook.png" /> Wal Wai</a> </h4>
+		<h4>Twitter : <a href="https://twitter.com/TheWai_21"><img src="./Assets/twitter.png" /> TheWai_21 </a></h4>
 	</div>
 
 </body>
