changing the resume

--- a/public/resume.html
+++ b/public/resume.html
@@ -114,10 +114,15 @@
 		<hr>
 		<div class="media">
 			<div class="media-body">
-				<p style="font-weight:bold">Jan 2017-Apr 2017   Teaching Assistant for Computer Science faculty</p>
+				<p style="font-weight:bold">Teaching Assistant for Computer Science faculty in Carleton University</p>
+				<p style="font-weight:bold">Jan 2017-Apr 2017 Introduction to Computational Thinking for Arts and Social Science</p>
+				<p style="font-weight:bold">Sep 2017-Current   Introduction to Computer Science I</p>
+				   
 				<ul>
 					<li>Marked assignments and midterm tests which trains me to understand different programmer's code</li>
-					<li>had office hour every week such that I can explain the prgramming concept to different people</li>
+					<li>Had office hour every week such that I can explain the prgramming concept to different people</li>
+					<li>Having tutorial to present the teaching materials and answer the question for students
+</li>
 				</ul>
 			</div>
 			<div class="media-right">
@@ -127,7 +132,8 @@
 
 		<div class="media">
 			<div class="media-body">
-				<p style="font-weight:bold">May 2017-Aug 2017   Embedded Software Developer	in Nokia</p>
+				<p style="font-weight:bold">Embedded Software Developer	in Nokia</p>
+				<p style="font-weight:bold">May 2017-Aug 2017</p>
 				<ul>
 					<li>Analysis difference between two different databases through <span style="font-weight:bold">MySQL Database</span></li>
 					<li>Wrote script to migrate two databases using <span style="font-weight:bold">Python</span></li>
