--- a/public/resume.html
+++ b/public/resume.html
@@ -47,7 +47,7 @@
 	<div class="container">
 		<h4>EDUCATION</h4>
 		<hr>
-		<p style="font-weight:bold;">September 2015-Present : Bachelor of Computer Science, Game Development Strea</p>
+		<p style="font-weight:bold;">September 2015-Present : Bachelor of Computer Science, Game Development Stream</p>
 		<p>Carleton University, Ottawa, ON</p>
 		<ul>
 			<li>3rd Year Undergraduate, CGPA 10.7/12.0 (A-) <a href="/grade">(See grade page)</a></li>
