--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -24,7 +24,7 @@
 			</div>
 			<ul class="nav navbar-nav navbar-right" id="headbar">
 				<li><a href="/resume">Resume</a></li>
-				<li><a href="/project">Project</a></li>
+				<li><a href="/project">Projects</a></li>
 				<li><a href="/contact">Contact</a></li>
 			</ul>
 		</div>
