--- a/public/project.html
+++ b/public/project.html
@@ -23,7 +23,7 @@
 			</div>
 			<ul class="nav navbar-nav navbar-right" id="headbar">
 				<li><a href="/resume">Resume</a></li>
-				<li class="active"><a href="/project">Project</a></li>
+				<li class="active"><a href="/project">Projects</a></li>
 				<li><a href="/contact">Contact</a></li>
 			</ul>
 		</div>
@@ -31,7 +31,7 @@
 
 	<div class="jumbotron">
 		<div class="container text-center title">
-			<h2>Project</h2>
+			<h2>Projects</h2>
 		</div>
 	</div>
 
