adding new version for Imitator

--- a/public/project-3.html
+++ b/public/project-3.html
@@ -108,9 +108,15 @@
 			<p>Auspicious Stone : Increase the chance for enemies to drop tools</p>
 
 			<h4>Download:</h4>
+			<p style="color:#888888">Normal Version:</p>
 			<a href="./Assets/Imitator.zip">
 				<h1> <span class="glyphicon glyphicon-download-alt"> </h1>
 			</a>
+			<p style="color:#888888">All Tools Unlock Version: (Story mode may break in normal version so this will be better when playing this game)</p>
+			<a href="./Assets/ImitatorUnlock.zip">
+				<h1> <span class="glyphicon glyphicon-download-alt"> </h1>
+			</a>
+
 			<p>Some computers may need to download Visual C++ Redistributable in order to run this game, click <a target="_blank" href="https://www.microsoft.com/en-us/download/details.aspx?id=48145">here</a></p>
 
 			<br>
