--- a/public/contact.html
+++ b/public/contact.html
@@ -23,7 +23,7 @@
 			</div>
 			<ul class="nav navbar-nav navbar-right" id="headbar">
 				<li><a href="/resume">Resume</a></li>
-				<li><a href="/project">Project</a></li>
+				<li><a href="/project">Projects</a></li>
 				<li class="active"><a href="/contact">Contact</a></li>
 			</ul>
 		</div>
