--- a/public/project-2.html
+++ b/public/project-2.html
@@ -99,7 +99,12 @@
 			<br>
 
 			<h4>Download:</h4>
-			<a href="./Assets/Ball-Game.zip" download>
+			<p style="color:#888888">For mac user</p>
+			<a href="./Assets/Ball-Game-mac.zip" download>
+				<h1> <span class="glyphicon glyphicon-download-alt"> </h1>
+			</a>
+			<p style="color:#888888">For windows user</p>
+			<a href="./Assets/Ball-Game-windows.zip" download>
 				<h1> <span class="glyphicon glyphicon-download-alt"> </h1>
 			</a>
 
