--- a/public/contact.html
+++ b/public/contact.html
@@ -47,6 +47,7 @@
 		<h4>Github : <a href="https://github.com/Walter0697"><img src="./Assets/GitHub-Mark-Light-32px.png" /> Walter0697</a> </h4>
 		<h4>Facebook : <a href="https://www.facebook.com/walterwaiiiiii"><img src="./Assets/facebook.png" /> Wal Wai</a> </h4>
 		<h4>Twitter : <a href="https://twitter.com/TheWai_21"><img src="./Assets/twitter.png" /> TheWai_21 </a></h4>
+		<h4>Linkedin : <a href="https://www.linkedin.com/in/walter-cheng-5a8023134/"><img src="./Assets/linked.png" /> Walter Cheng </a> </h4>
 	</div>
 
 </body>
