--- a/public/project-2.html
+++ b/public/project-2.html
@@ -100,7 +100,7 @@
 
 			<h4>Download:</h4>
 			<p style="color:#888888">For mac user</p>
-			<a href="./Assets/Ball-Game-mac.tar" download>
+			<a href="./Assets/Ball-Game-mac.zip" download>
 				<h1> <span class="glyphicon glyphicon-download-alt"> </h1>
 			</a>
 			<p style="color:#888888">For windows user</p>
