--- a/public/resume.html
+++ b/public/resume.html
@@ -37,7 +37,7 @@
 
 	<div class="container text-center">
 		<p>Click here to download my resume:</p>
-		<a href="./Assets/waltercheng.docx" download>
+		<a href="./Assets/waltercheng.pdf" download>
 			<h1><span class="glyphicon glyphicon-file"></span></h1>
 		</a>
 		<br>
@@ -77,14 +77,14 @@
 			<td>MongoDB  </td>
 			<td>MySQL    </td>
 			<td>Linux    </td>
-			<td>Shceme   </td>
+			<td>OpenGL   </td>
 		</tr>
 		<tr>
 			<td>C</td>
 			<td>Pascal</td>
 			<td>Javascript</td>
 			<td>SFML</td>
-			<td></td>
+			<td>Scheme</td>
 			<td>Prolog</td>
 		</tr>
 		<tr>
@@ -92,7 +92,7 @@
 			<td>Node.js</td>
 			<td>HTML/CSS</td>
 			<td>Git</td>
-			<td></td>
+			<td>Android Studio</td>
 			<td>OpenGL</td>
 		</tr>
 		</table>
