--- a/public/projectpage.html
+++ b/public/projectpage.html
@@ -65,25 +65,25 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-    background-image: url('/Assets/headbar_background.jpg');
+    background-image: url('/Assets/background/headbar_background.jpg');
     min-height: 100%;
 }
 
 /* Second image (Portfolio) */
 .bgimg-2 {
-    background-image: url('/Assets/project-background.jpg');
+    background-image: url('/Assets/background/project-background.jpg');
     min-height: 400px;
 }
 
 /* Third image (Resume) */
 .bgimg-3 {
-    background-image: url('/Assets/resume-background.jpg');
+    background-image: url('/Assets/background/resume-background.jpg');
     min-height: 400px;
 }
 
 /* Fourth image (Contact) */
 .bgimg-4 {
-    background-image: url('/Assets/contact-background.jpg');
+    background-image: url('/Assets/background/contact-background.jpg');
     min-height: 400px;
 }
 
@@ -125,15 +125,15 @@ body, html {
 
 <div class="w3-content w3-center">
 
-  <p id="#game" class="w3-large w3-center text-font w3-padding-32">Game-related Project</p>
-
   <div class="w3-content w3-container">
+
+  <p id="#game" class="w3-large w3-center text-font w3-padding-32">Game-related Projects</p>
 
     <!-- Project Imitator -->
     <div id="imitator" class="project">
         <div class="media">
           <div class="media-left">
-            <img class="d-flex align-self-center mr-3" src="./Assets/game3.png" alt="imitator" style="width:250px"/>
+            <img class="d-flex align-self-center mr-3" src="./Assets/project_screenshot/imitator.png" alt="imitator" style="width:250px"/>
             <br/>
           </div>
           <div class="media-body text-center">
@@ -147,8 +147,8 @@ body, html {
             </p>
             <p>Imitator is a game that forced player to copy enemies' bullets once they eliminated the enemies. This game requires player to think about which enemies should be killed and what kind of bullets will counter different types of enemies. After player killed the boss, they will have a powerful bullet type but it will be easily replaced after player kill tons of normal enemies.<br/></p>
             <p style="color:#666666">Download here:</p>
-            <p style="color:#666666">Normal Version: <a href="./Assets/Imitator.zip" class="fa fa-download"></a></p>
-            <p style="color:#666666">All Tools Unlocked Version: <a href="./Assets/ImitatorUnlock.zip" class="fa fa-download">
+            <p style="color:#666666">Normal Version: <a href="./Assets/zip_file/Imitator.zip" class="fa fa-download"></a></p>
+            <p style="color:#666666">All Tools Unlocked Version: <a href="./Assets/zip_file/ImitatorUnlock.zip" class="fa fa-download">
             </a></p>
             <a href="https://www.microsoft.com/en-us/download/details.aspx?id=48145" style="color:#666666">Some computers may need to download Visual C++ Redistibutable in order to run this game, click here</a>
           </div>
@@ -160,7 +160,7 @@ body, html {
     <div id="music-shooter" class="project">
         <div class="media">
           <div class="media-left">
-            <img class="d-flex align-self-center mr-3" src="./Assets/game1.png" style="width:250px"/>
+            <img class="d-flex align-self-center mr-3" src="./Assets/project_screenshot/musicshooter.png" style="width:250px"/>
           </div>
           <div class="media-body text-center">
             <h2>Music Shooter</h2>
@@ -172,7 +172,7 @@ body, html {
             <i class="fa fa-star"></i>&nbsp;&nbsp;Visual Studio&nbsp;&nbsp;&nbsp;
             </p>
             <p>This is normal horizontal scrolling game for learning the concept of vertical scrolling. Most assets were drawn by myself such as player, enemies and bullets and the rest are from open game art!<br/></p>
-            <p style="color:#666666">Download here: <a href="./Assets/Music Shooter.zip" class="fa fa-download"></a></p>
+            <p style="color:#666666">Download here: <a href="./Assets/zip_file/Music Shooter.zip" class="fa fa-download"></a></p>
           </div>
         </div>
     </div>
@@ -182,7 +182,7 @@ body, html {
     <div id="ball-game" class="project">
         <div class="media">
           <div class="media-left">
-            <img class="d-flex align-self-center mr-3" src="./Assets/game2.png" alt="Ball Game" style="width:250px"/>
+            <img class="d-flex align-self-center mr-3" src="./Assets/project_screenshot/ballgame.png" alt="Ball Game" style="width:250px"/>
             <br/>
           </div>
           <div class="media-body text-center">
@@ -194,13 +194,58 @@ body, html {
             <i class="fa fa-star"></i>&nbsp;&nbsp;Processing&nbsp;&nbsp;&nbsp;
             </p>
             <p>This is a coding practice gmae that based on the game rule of a mobile app game : BBTAN from 111%, I also added more tools and different setting in order to make the game funnier<br/></p>
-            <p style="color:#666666">Download here: <a href="./Assets/Ball-Game-windows.zip" class="fa fa-download"></a></p>
+            <p style="color:#666666">Download here: <a href="./Assets/zip_file/Ball-Game-windows.zip" class="fa fa-download"></a></p>
           </div>
         </div>
     </div>
     <br/>
 
-    
+    <p id="#game" class="w3-large w3-center text-font w3-padding-32">Other Projects</p>
+
+    <!-- Project Dinder -->
+    <div id="dinder" class="project">
+        <div class="media">
+          <div class="media-left">
+            <img class="d-flex align-self-center mr-3" src="./Assets/project_screenshot/dinder.png" alt="Dinder" style="width:250px"/>
+            <br/>
+          </div>
+          <div class="media-body text-center">
+            <h2>Dinder<br/><a href="https://github.com/Walter0697/Dinder"><i class="fa fa-github-square"></i>&nbsp;<span style="font-size:12px">Code here!</span></a></h2>
+            <br/>
+            <h5>Technology used:</h5>
+            <p style="font-size:15px">
+            <i class="icon-java"></i>&nbsp;&nbsp;Java&nbsp;&nbsp;&nbsp;
+            <i class="fa fa-star"></i>&nbsp;&nbsp;Android Studio&nbsp;&nbsp;&nbsp;
+            </p>
+            <p>Mobile app that will search through the database to provide random recipe to the user. It will generate recipe according to the user preferences. Swipe Right and Left to Like and Dislike the recipe.<br/> Group project with Zahra Ahmed and Afifa Asad. </p>
+
+            <p style="color:#666666">Youtube Video: <a href="https://www.youtube.com/watch?v=xD4k4IEFl0g" class="fa fa-youtube-play"></a></p>
+            <p style="color:#666666">Download here: <a href="https://play.google.com/store/apps/details?id=com.team206255.dineder" class="fa fa-download"></a></p>
+          </div>
+        </div>
+    </div>
+    <br/>
+
+    <!-- Project Website -->
+    <div id="waltercheng" class="project">
+        <div class="media">
+          <div class="media-left">
+            <img class="d-flex align-self-center mr-3" src="./Assets/project_screenshot/waltercheng.png" alt="Waltercheng" style="width:250px"/>
+            <br/>
+          </div>
+          <div class="media-body text-center">
+            <h2>waltercheng.com(this website!)<br/><a href="https://github.com/Walter0697/Personal-Porfolio"><i class="fa fa-github-square"></i>&nbsp;<span style="font-size:12px">Code here!</span></a></h2>
+            <br/>
+            <h5>Technology used:</h5>
+            <p style="font-size:15px">
+            <i class="icon-bootstrap"></i>&nbsp;&nbsp;Bootstrap&nbsp;&nbsp;&nbsp;
+            <i class="icon-nodejs"></i>&nbsp;&nbsp;node.js&nbsp;&nbsp;&nbsp;
+            </p>
+            <p>Starting from a template and based on my own knowledge to build up this website! </p>
+          </div>
+        </div>
+    </div>
+    <br/>
 
   </div>
 </div>
