adding icons that library doesn't provide

--- a/public/homepage.html
+++ b/public/homepage.html
@@ -48,6 +48,15 @@ body, html {
     background-size: cover;
 }
 
+/* For icons that aren't from the website */
+.icon-16{
+  height: 16px;
+}
+
+.icon-50{
+  height: 50px;
+}
+
 .text-font{
   font-family: 'Gloria Hallelujah', cursive;
 }
@@ -164,7 +173,7 @@ body, html {
     <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:75%">75%</div>
   </div>
 
-  <p style="font-size:20px"><i class="fa fa-star"></i>&nbsp;&nbsp;&nbsp;OpenGL&nbsp;&nbsp;&nbsp;<span style="font-size:12px"><i class="fa fa-gears"></i> Currently using</span></p>
+  <p style="font-size:20px"><image src="/Assets/icon/opengl.png" class="icon-16" />&nbsp;&nbsp;&nbsp;OpenGL&nbsp;&nbsp;&nbsp;<span style="font-size:12px"><i class="fa fa-gears"></i> Currently using</span></p>
   <div class="w3-light-grey">
     <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:75%">75%</div>
   </div>
@@ -174,17 +183,17 @@ body, html {
     <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:80%">80%</div>
   </div>
 
-  <p style="font-size:20px"><i class="fa fa-star"></i>&nbsp;&nbsp;&nbsp;SFML</p>
+  <p style="font-size:20px"><image src="/Assets/icon/sfml.png" class="icon-16" />&nbsp;&nbsp;&nbsp;SFML</p>
   <div class="w3-light-grey">
     <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:80%">80%</div>
   </div>
 
-  <p style="font-size:20px"><i class="fa fa-star"></i>&nbsp;&nbsp;&nbsp;Scheme&nbsp;&nbsp;&nbsp;<span style="font-size:12px"><i class="fa fa-gears"></i> Currently using</span></p>
+  <p style="font-size:20px"><image src="/Assets/icon/scheme.png" class="icon-16" />&nbsp;&nbsp;&nbsp;Scheme&nbsp;&nbsp;&nbsp;<span style="font-size:12px"><i class="fa fa-gears"></i> Currently using</span></p>
   <div class="w3-light-grey">
     <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:80%">80%</div>
   </div>
 
-  <p style="font-size:20px"><i class="fa fa-star"></i>&nbsp;&nbsp;&nbsp;Javascript</p>
+  <p style="font-size:20px"><i class="icon-javascript"></i>&nbsp;&nbsp;&nbsp;Javascript</p>
   <div class="w3-light-grey">
     <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:75%">75%</div>
   </div>
@@ -196,6 +205,8 @@ body, html {
     <i class="icon-nodejs"></i>&nbsp;&nbsp;
     <i class="icon-mongodb"></i>&nbsp;&nbsp;
     <i class="icon-npm"></i>&nbsp;&nbsp;
+    <image src="/Assets/icon/visualstudio.png" class="icon-50" />&nbsp;&nbsp;
+    <image src="/Assets/icon/processing.png" class="icon-50" />&nbsp;&nbsp;
   </p>
 
   <p class="w3-large w3-center w3-padding-8 text-font">I will know it in the future:</p>
