--- a/public/projectpage.html
+++ b/public/projectpage.html
@@ -33,6 +33,10 @@ body, html {
     font-size: 18px;
 }
 
+.icon-16{
+  height: 16px;
+}
+
 .project:hover{
   transition: 0.5s;
   box-shadow: 4px 4px 4px 4px #00008B;
@@ -142,8 +146,8 @@ body, html {
             <h5>Technology used:</h5>
             <p style="font-size:15px">
             <i class="icon-cplusplus"></i>&nbsp;&nbsp;C++&nbsp;&nbsp;&nbsp;
-            <i class="fa fa-star"></i>&nbsp;&nbsp;SFML&nbsp;&nbsp;&nbsp;
-            <i class="fa fa-star"></i>&nbsp;&nbsp;Visual Studio&nbsp;&nbsp;&nbsp;
+            <image src="/Assets/icon/sfml.png" class="icon-16" />&nbsp;&nbsp;SFML&nbsp;&nbsp;&nbsp;
+            <image src="/Assets/icon/visualstudio.png" class="icon-16" />&nbsp;&nbsp;Visual Studio&nbsp;&nbsp;&nbsp;
             </p>
             <p>Imitator is a game that forced player to copy enemies' bullets once they eliminated the enemies. This game requires player to think about which enemies should be killed and what kind of bullets will counter different types of enemies. After player killed the boss, they will have a powerful bullet type but it will be easily replaced after player kill tons of normal enemies.<br/></p>
             <p style="color:#666666">Download here:</p>
@@ -168,8 +172,8 @@ body, html {
             <h5>Technology used:</h5>
             <p style="font-size:15px">
             <i class="icon-cplusplus"></i>&nbsp;&nbsp;C++&nbsp;&nbsp;&nbsp;
-            <i class="fa fa-star"></i>&nbsp;&nbsp;SFML&nbsp;&nbsp;&nbsp;
-            <i class="fa fa-star"></i>&nbsp;&nbsp;Visual Studio&nbsp;&nbsp;&nbsp;
+            <image src="/Assets/icon/sfml.png" class="icon-16" />&nbsp;&nbsp;SFML&nbsp;&nbsp;&nbsp;
+            <image src="/Assets/icon/visualstudio.png" class="icon-16" />&nbsp;&nbsp;Visual Studio&nbsp;&nbsp;&nbsp;
             </p>
             <p>This is normal horizontal scrolling game for learning the concept of vertical scrolling. Most assets were drawn by myself such as player, enemies and bullets and the rest are from open game art!<br/></p>
             <p style="color:#666666">Download here: <a href="./Assets/zip_file/Music Shooter.zip" class="fa fa-download"></a></p>
@@ -191,7 +195,7 @@ body, html {
             <h5>Technology used:</h5>
             <p style="font-size:15px">
             <i class="icon-java"></i>&nbsp;&nbsp;Java&nbsp;&nbsp;&nbsp;
-            <i class="fa fa-star"></i>&nbsp;&nbsp;Processing&nbsp;&nbsp;&nbsp;
+            <image src="/Assets/icon/processing.png" class="icon-16" />&nbsp;&nbsp;Processing&nbsp;&nbsp;&nbsp;
             </p>
             <p>This is a coding practice gmae that based on the game rule of a mobile app game : BBTAN from 111%, I also added more tools and different setting in order to make the game funnier<br/></p>
             <p style="color:#666666">Download here: <a href="./Assets/zip_file/Ball-Game-windows.zip" class="fa fa-download"></a></p>
@@ -215,7 +219,7 @@ body, html {
             <h5>Technology used:</h5>
             <p style="font-size:15px">
             <i class="icon-java"></i>&nbsp;&nbsp;Java&nbsp;&nbsp;&nbsp;
-            <i class="fa fa-star"></i>&nbsp;&nbsp;Android Studio&nbsp;&nbsp;&nbsp;
+            <i class="fa fa-android"></i>&nbsp;&nbsp;Android Studio&nbsp;&nbsp;&nbsp;
             </p>
             <p>Mobile app that will search through the database to provide random recipe to the user. It will generate recipe according to the user preferences. Swipe Right and Left to Like and Dislike the recipe.<br/> Group project with Zahra Ahmed and Afifa Asad. </p>
 
