--- a/public/projectpage.html
+++ b/public/projectpage.html
@@ -37,6 +37,10 @@ body, html {
   height: 16px;
 }
 
+.icon-32{
+  height: 32px;
+}
+
 .project:hover{
   transition: 0.5s;
   box-shadow: 4px 4px 4px 4px #00008B;
@@ -214,7 +218,7 @@ body, html {
             <br/>
           </div>
           <div class="media-body text-center">
-            <h2>Dinder<br/><a href="https://github.com/Walter0697/Dinder"><i class="fa fa-github-square"></i>&nbsp;<span style="font-size:12px">Code here!</span></a></h2>
+            <h2><img src="./Assets/icon/dinder.png" class="icon-32"/>Dinder<br/><a href="https://github.com/Walter0697/Dinder"><i class="fa fa-github-square"></i>&nbsp;<span style="font-size:12px">Code here!</span></a></h2>
             <br/>
             <h5>Technology used:</h5>
             <p style="font-size:15px">
