--- a/public/homepage.html
+++ b/public/homepage.html
@@ -234,16 +234,20 @@ body, html {
   <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
   <div class="w3-row-padding w3-center">
 
-    <div class="w3-col m4">
+    <div class="w3-col m3">
       <a href="/project#imitator"><img src="/Assets/project_screenshot/imitator.png" style="width:100%" class="w3-hover-opacity" alt="Imitator"></a>
     </div>
 
-    <div class="w3-col m4">
+    <div class="w3-col m3">
       <a href="/project#music-shooter"><img src="/Assets/project_screenshot/musicshooter.png" style="width:100%"  class="w3-hover-opacity" alt="Music shooter"></a>
     </div>
 
-    <div class="w3-col m4">
+    <div class="w3-col m3">
       <a href="/project#ball-game"><img src="/Assets/project_screenshot/ballgame.png" style="width:100%" class="w3-hover-opacity" alt="Ball Game"></a>
+    </div>
+
+    <div class="w3-col m3">
+     <a href="/project#fly"><img src="/Assets/project_screenshot/fly.png" style="width:100%" class="w3-hover-opacity" alt="Ball Game"></a>
     </div>
 
   </div>
@@ -314,7 +318,7 @@ body, html {
     <div class="w3-col m12 w3-panel">
       <div class="w3-large w3-margin-bottom">
         <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Ottawa, CA<br>
-        <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Phone: +1(343)777-8008)<br>
+        <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Phone: +1(343)777-8008<br>
         <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Email: walterpakwai@live.com<br>
       </div>
       <p>Or check me out in my social media!</p>
