--- a/public/projectpage.html
+++ b/public/projectpage.html
@@ -208,6 +208,28 @@ body, html {
     </div>
     <br/>
 
+    <!-- Project Imitator -->
+    <div id="fly" class="project">
+        <div class="media">
+          <div class="media-left">
+            <img class="d-flex align-self-center mr-3" src="./Assets/project_screenshot/fly.png" alt="fly" style="width:250px"/>
+            <br/>
+          </div>
+          <div class="media-body text-center">
+            <h2>Flying Undersized Controlled Killer <br/><a href="https://github.com/Walter0697/Flying-Undersized-Controlled-Killer"><i class="fa fa-github-square"></i>&nbsp;<span style="font-size:12px">Code here!</span></a></h2>
+            <br/>
+            <h5>Technology used:</h5>
+            <p style="font-size:15px">
+            <i class="icon-cplusplus"></i>&nbsp;&nbsp;C++&nbsp;&nbsp;&nbsp;
+            <image src="/Assets/icon/opengl.png" class="icon-16" />&nbsp;&nbsp;OpenGL&nbsp;&nbsp;&nbsp;
+            <image src="/Assets/icon/visualstudio.png" class="icon-16" />&nbsp;&nbsp;Visual Studio&nbsp;&nbsp;&nbsp;
+            </p>
+            <p>Flying Undersized Controlled Killer is a game about a fly who is trying to kill human with his ability. The fly can split on different enemies and eliminate them but it would be more difficult for it to do that with human. Therefore, it will need to take a block from the ground and drop above the human. <br/> Group project with Mohamed Kazma and Jeremy Melone <br/></p>
+          </div>
+        </div>
+    </div>
+    <br/>
+
     <p id="#game" class="w3-large w3-center text-font w3-padding-32">Other Projects</p>
 
     <!-- Project Dinder -->
